Update Step 1 Google POI Data Processing.ipynb

--- a/Step 1 Google POI Data Processing.ipynb
+++ b/Step 1 Google POI Data Processing.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# API key and url for Google map POI scraping\n",
-    "API_KEY= 'AIzaSyB3zGraWYiQkAWNLWLxC-Xe-p80fhNrbKo'\n",
+    "API_KEY = Google_place_key\n",
     "url = 'https://maps.googleapis.com/maps/api/place/textsearch/json'\n",
     "\n",
     "# The country to process and file directions\n",
@@ -44,7 +44,7 @@
     "# Threshold to filter POIs\n",
     "review_threshold = 0\n",
     "\n",
-    "OpenAI_key='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'\n"
+    "OpenAI_key = OpenAI_key
    ]
   },
   {
