Update Step 1 Google POI Data Processing.ipynb

--- a/Step 1 Google POI Data Processing.ipynb
+++ b/Step 1 Google POI Data Processing.ipynb
@@ -44,7 +44,7 @@
     "# Threshold to filter POIs\n",
     "review_threshold = 0\n",
     "\n",
-    "OpenAI_key = OpenAI_key
+    "OpenAI_key = OpenAI_key"
    ]
   },
   {
