Update Step 1 Google POI Data Processing.ipynb

--- a/Step 1 Google POI Data Processing.ipynb
+++ b/Step 1 Google POI Data Processing.ipynb
@@ -37,9 +37,9 @@
     "\n",
     "# The country to process and file directions\n",
     "country = 'Korea' # If Abbre. of country is commonly used, joined names with '|'. For exampe: United Kingdom|UK\n",
-    "route_input = 'Acquisition Plan/Korea' # The attraction list for POI retrieving\n",
-    "route_export = '/Users/glen.gu/Documents/Python Project/Acquisition Plan/Korea'\n",
-    "route_POI_raw_data = '/Users/glen.gu/Documents/Python Project/POI_raw/Korea'\n",
+    "route_input = route_input # The attraction list for POI retrieving\n",
+    "route_export = route_output\n",
+    "route_POI_raw_data = route_raw_data\n",
     "\n",
     "# Threshold to filter POIs\n",
     "review_threshold = 0\n",
