Update Step 1 Google POI Data Processing.ipynb

--- a/Step 1 Google POI Data Processing.ipynb
+++ b/Step 1 Google POI Data Processing.ipynb
@@ -36,7 +36,7 @@
     "url = 'https://maps.googleapis.com/maps/api/place/textsearch/json'\n",
     "\n",
     "# The country to process and file directions\n",
-    "country = 'Korea' # If Abbre. of country is commonly used, joined names with '|'. For exampe: United Kingdom|UK\n",
+    "country = 'Country name' # If Abbre. of country is commonly used, joined names with '|'. For exampe: United Kingdom|UK\n",
     "route_input = route_input # The attraction list for POI retrieving\n",
     "route_export = route_output\n",
     "route_POI_raw_data = route_raw_data\n",
