Update Step 1 Google POI Data Processing.ipynb

--- a/Step 1 Google POI Data Processing.ipynb
+++ b/Step 1 Google POI Data Processing.ipynb
@@ -71,7 +71,7 @@
     "    params = {\n",
     "    'query': f'{place[0]}, {place[1]}',\n",
     "    'key': API_KEY,\n",
-    "    'pagetoken' : page_token,\n"
+    "    'pagetoken' : page_token,\n",
     "        }\n",
     "    result = requests.get(url, params=params)\n",
     "    #Convert data into json type first and dataframe then\n",
